# forensic-toolbox

./: .gitignore  INSTALL.md  Makefile  Manifest.in  README.md  _config.yml  evtx_mapping.py  main.py  pyproject.toml  registry_mapping.py  requirements.txt  setup.bat  setup.cfg  volatility_mapping.py
Toolbox/: __init__.py  toolbox_evtx.py  toolbox_lnk.py  toolbox_prefetch.py  toolbox_registry.py  toolbox_volatility.py
assets/css/: style.scss
docs/: README.md  _config.yml
docs/assets/css/: style.scss
