[metadata]
name = forensic-toolbox
version = 1.0.0
author = ProfGP
author_email = practical4n6@gmail.com
description = Windows Forensic Artifacts Parser - Registry, Prefetch, and LNK analysis
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ProfGP/forensic-toolbox
project_urls =
    Bug Tracker = https://github.com/ProfGP/forensic-toolbox/issues
    Documentation = https://github.com/ProfGP/forensic-toolbox#readme
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security
    Topic :: System :: Forensics

[options]
packages = find:
python_requires = >=3.7
install_requires =
    python-registry>=1.3.1

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    flake8>=6.0
    mypy>=1.0
prefetch =
    pyxpress>=0.1.0
all =
    pyxpress>=0.1.0

[options.entry_points]
console_scripts =
    forensic-toolbox = main:main
    ftb = main:main

[flake8]
max-line-length = 100
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    venv,
    .venv
ignore = E203, W503